Fix vertical align on IE

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -28,11 +28,13 @@
 #header-content-left-side {
   display: flex;
   flex-direction: row;
+  align-items: center;
 }
 
 #header-content-right-side {
   display: flex;
   flex-direction: row;
+  align-items: center;
   margin-left: auto;
   font-weight: 600;
 }
